--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -1295,6 +1295,7 @@
 		}
 	}
 	.about {
+		padding-bottom: 50px;
 		&__photo {
 			margin-top: 30px;
 		}
@@ -1307,6 +1308,7 @@
 	}
 	.list-product {
 		&__inner {
+			margin-top: 30px;
 			display: block;
 			margin-left: 0;
 			>* {
@@ -1316,6 +1318,7 @@
 		}
 	}
 	.sertificats {
+		padding: 40px 0 50px;
 		&__inner {
 			display: block;
 			position: relative;
@@ -1368,6 +1371,7 @@
 		}
 	}
 	.reviews {
+		padding-top: 40px;
 		padding-bottom: 140px;
 		position: relative;
 		.slider-arrows {
