--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -4,6 +4,13 @@
 			box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
 		}
 	}
+	&_service-consult {
+		.services-box {
+			.title {
+				max-width: 545px;
+			}
+		}
+	}
 	&_gray-foot {
 		.footer {
 			&__nav {
@@ -1247,6 +1254,26 @@
 	.photo-slider {
 		padding: 50px 0 40px;
 	}
+	.breadcrumbs {
+		&__item {
+			display: none;
+			&_back {
+				display: inline-block;
+				margin-left: 0;
+				&:before {
+					display: none;
+				}
+			}
+		}
+		&__btn {
+			&-home {
+				display: none;
+			}
+			&-back {
+				display: inline-block;
+			}
+		}
+	}
 	.services-box {
 		margin-bottom: 40px;
 		&__nav {
@@ -1461,26 +1488,6 @@
 	.reviews {
 		.slick-list {
 			padding-right: 50%;
-		}
-	}
-	.breadcrumbs {
-		&__item {
-			display: none;
-			&_back {
-				display: inline-block;
-				margin-left: 0;
-				&:before {
-					display: none;
-				}
-			}
-		}
-		&__btn {
-			&-home {
-				display: none;
-			}
-			&-back {
-				display: inline-block;
-			}
 		}
 	}
 }
