--- a/assets/css/page.scss
+++ b/assets/css/page.scss
@@ -818,6 +818,16 @@
 		}
 	}
 }
+@media(max-width: 1350px) {
+	.stat__item {
+		&:nth-child(n+8) {
+			display: none;
+		}
+		&:nth-child(7) {
+			margin-right: 0;
+		}
+	}
+}
 @media(max-width: 1200px) {
 	.mobile-menu {
 		display: block;
@@ -830,14 +840,6 @@
 			&:before {
 				display: none;
 			}
-		}
-	}
-	.stat__item {
-		&:nth-child(n+7) {
-			display: none;
-		}
-		&:nth-child(6) {
-			margin-right: 0;
 		}
 	}
 	.footer {
@@ -893,6 +895,14 @@
 			&__phone {
 				font-size: 20px;
 			}
+		}
+	}
+	.stat__item {
+		&:nth-child(n+7) {
+			display: none;
+		}
+		&:nth-child(6) {
+			margin-right: 0;
 		}
 	}
 }
