--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -8,6 +8,16 @@
   url('../fonts/Roboto-Regular.ttf') format('truetype'),
  }
 
+  @font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src:   url('../fonts/Roboto-Italic.woff2') format('woff2'),
+  url('../fonts/Roboto-Italic.woff') format('woff'),
+  url('../fonts/Roboto-Italic.ttf') format('truetype'),
+ }
+
  @font-face {
   font-family: 'Roboto';
   font-style: normal;
