--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -32,6 +32,73 @@
 			}
 		}
 	}
+	&-nav {
+		margin-bottom: 80px;
+		&__inner {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+		&__arrow {
+			width: 60px;
+			height: 60px;
+			flex: 0 0 60px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: $lbrown;
+			transition: all .2s linear;
+			margin-bottom: 20px;
+			svg {
+				width: 16px;
+				height: 16px;
+				fill: $wh;
+				transition: all .2s linear;
+			}
+			&_prev {
+				svg {
+					transform: rotate(180deg);
+				}
+			}
+			&:hover {
+				background-color: $gray;
+				svg {
+					fill: $bl;
+				}
+			}
+		}
+		&__pagin {
+			display: flex;
+			flex-wrap: wrap;
+		}
+		&__link {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 60px;
+			height: 60px;
+			flex: 0 0 60px;
+			background-color: $gray;
+			transition: all .2s linear;
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 400;
+			color: $bl;
+			margin: 0 20px 20px;
+			&:hover {
+				background-color: $lbrown;
+				color: $wh;
+			}
+			&.active {
+				background-color: $lbrown;
+				color: $wh;
+			}
+		}
+		&__more {
+			text-align: center;
+			display: none;
+		}
+	}
 }
 
 /*========Breadcrumbs=======*/
@@ -1207,6 +1274,151 @@
 }
 /*========/vacancy======*/
 
+/*========Article======*/
+.article {
+	margin-bottom: 90px;
+	&__data {
+		margin-top: 10px;
+	}
+	&__inner {
+		margin-top: 50px;
+		display: flex;
+		align-items: flex-start;
+	}
+	&__content {
+		width: 77%;
+		padding-right: 50px;
+	}
+	&__row {
+		display: flex;
+	}
+	&__photo {
+		width: 43.5%;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	&__col {
+		width: 65.5%;
+		padding-left: 40px;
+	}
+	&__text {
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.5;
+		p {
+			margin-bottom: 40px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+	&__sidebar {
+		width: 23%;
+		.info-sidebar__title {
+			max-width: 100%;
+		}
+	}
+}
+/*========/article======*/
+
+/*=======Quote======*/
+.quote {
+	margin: 40px 0;
+	border: 4px solid $op-brown;
+	padding: 30px;
+	font-family: $ff;
+	font-size: 16px;
+	font-weight: 400;	
+	font-style: italic;
+	line-height: 1.5;
+	position: relative;
+	&:before {
+		content: "";
+		width: 27px;
+		height: 24px;
+		background: url("../images/icons/quote.svg") center no-repeat;
+		position: absolute;
+		top: -15px;
+		left: 30px;
+		z-index: 1;
+	}
+}
+/*=======/quote=====*/
+
+/*========Supply=====*/
+.supply {
+	margin-bottom: 30px;
+	&__inner {
+		display: flex;
+	}
+	&__info {
+		width: 42%;
+		padding-right: 30px;
+	}
+	&__slider {
+		width: 58%;
+	}
+	&__text {
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.5;
+		margin-bottom: 20px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	&__list {
+		margin-bottom: 10px;
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			margin-left: -60px;
+		}
+		li {
+			width: calc(33.33333% - 60px);
+			margin-left: 60px;
+		}
+	}
+	&__warning {
+		display: flex;
+		align-items: flex-start;
+		img {
+			margin-top: 4px;
+		}
+		div {
+			margin-left: 10px;
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 400;
+			color: $red;
+			line-height: 1.5;
+		}
+	}
+	&__slider {
+		display: flex;
+	}
+	&__slide {
+		cursor: zoom-in;
+		img {
+			width: 100%;
+		}
+	}
+	.slick-list {
+		margin-left: -20px;
+	}
+	.slick-slide {
+		margin-left: 20px;
+	}
+}
+/*========/supply=====*/
+
 
 /*========Adaptive======*/
 @media(max-width: 1440px) {
@@ -1247,6 +1459,39 @@
 				}
 			}
 		}
+	}
+	.supply {
+		&__inner {
+			display: block;
+		}
+		&__info {
+			width: 100%;
+			padding-right: 0;
+			margin-bottom: 30px;
+		}
+		&__list {
+			li {
+				width: calc(25% - 60px);
+			}
+		}
+		&__warning {
+			max-width: 510px;
+		}
+		&__slider {
+			width: 100%;
+			max-width: 540px;
+		}
+		.slick-track {
+			margin-left: 0;
+		}
+		.slick-list {
+			margin-left: 0;
+			margin-right: -12px;
+		}
+		.slick-slide {
+			margin-left: 0;
+			margin-right: 12px;
+		} 
 	}
 	.contact-block {
 		&__item {
@@ -1299,6 +1544,41 @@
 	}
 }
 @media(max-width: 992px) {
+	.article {
+		margin-bottom: 70px;
+		&__inner {
+			display: block;
+		}
+		&__content {
+			width: 100%;
+			margin-bottom: 50px;
+			padding-right: 0;
+
+		}
+		&__sidebar {
+			width: 100%;
+			.info-sidebar {
+				&__inner {
+					display: flex;
+					flex-wrap: wrap;
+					>* {
+						width: calc(50% - 10px);
+						margin-right: 20px;
+						&:nth-child(even) {
+							margin-right: 0;
+						}
+					}
+				}
+				&__item {
+					flex-direction: column;
+				}
+				&__title {
+					margin-right: 0;
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
 	.testimonial {
 		&__info {
 			flex: 0 0 460px;
@@ -1368,6 +1648,13 @@
 	}
 	.contact-block {
 		margin-bottom: 80px;
+		&__inner {
+			&.three {
+				.contact-block__box {
+					width: 100%;
+				}
+			}
+		}
 	}
 	.list-block {
 		margin-top: 80px;
@@ -1492,6 +1779,45 @@
 			}
 		}
 	}
+	.supply {
+		&__list {
+			ul {
+				margin-left: -25px;
+			}
+			li {
+				width: calc(33.33333% - 25px);
+				margin-left: 25px;
+			}
+		}
+	}
+	.article {
+		margin-bottom: 55px;
+		&__inner {
+			margin-top: 30px;
+		}
+		&__content {
+			margin-bottom: 30px;
+		}
+		&__row {
+			display: block;
+		}
+		&__photo {
+			width: 100%;
+			margin-bottom: 30px;
+		}
+		&__col {
+			width: 100%;
+			padding-left: 0;
+		}
+		&__text {
+			p {
+				margin-bottom: 30px;
+			}
+		}
+	}
+	.quote {
+		margin: 30px 0;
+	}
 	.text-block {
 		&__content {
 			margin-top: 30px;
@@ -1511,6 +1837,7 @@
 	.contact-block {
 		margin-bottom: 50px;
 		&__inner {
+			flex-wrap: wrap;
 			&.one {
 				.contact-block__info {
 					flex-wrap: wrap;
@@ -1518,6 +1845,11 @@
 				.contact-block__item {
 					width: 100%;
 					margin-right: 0;
+				}
+			}
+			&.two {
+				.contact-block__box {
+					width: 100%;
 				}
 			}
 		}
@@ -1670,6 +2002,36 @@
 	}
 }
 @media(max-width: 540px) {
+	.page {
+		&-nav {
+			&__inner {
+				display: none;
+			}
+			&__more {
+				display: block;
+				.btn {
+					width: 100%;
+					span {
+						&:first-child {
+							flex: 1 1 auto;
+						}
+					}
+				}
+			}
+		}
+	}
+	.article {
+		&__sidebar {
+			.info-sidebar {
+				&__inner {
+					>* {
+						width: 100%;
+						margin-right: 0;
+					}
+				}
+			}
+		}
+	}
 	.vacancy {
 		&__inner {
 			margin-top: 30px;
@@ -1735,6 +2097,18 @@
 	}
 }
 @media(max-width: 414px) {
+	.supply {
+		&__list {
+			li {
+				width: calc(50% - 25px);
+				margin-left: 25px;
+			}
+		}
+		.slick-list {
+			padding-right: 15px;
+			margin-right: -22px;
+		}
+	}
 	.sertificats-list {
 		margin-bottom: 50px;
 		padding: 40px 0;
