--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,13 @@
 
 @font-face {
   font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url("../fonts/Roboto-Italic.woff2") format("woff2"), url("../fonts/Roboto-Italic.woff") format("woff"), url("../fonts/Roboto-Italic.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
@@ -32,8 +39,6 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
@@ -135,7 +140,10 @@
     background: #BF9D77;
     padding: 3px 22px 3px 9px;
     position: relative;
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
     .header-lang span {
       font-family: "Roboto", sans-serif;
       font-size: 12px;
@@ -157,6 +165,8 @@
       -webkit-transition: all .3s linear;
       -o-transition: all .3s linear;
       transition: all .3s linear; }
+    .header-lang:hover {
+      background-color: #4A494A; }
     .header-lang.active {
       background-color: #4A494A; }
       .header-lang.active:after {
@@ -336,16 +346,21 @@
   line-height: 1.5; }
 
 .stat__item {
-  margin-right: 16px;
   margin-bottom: 2px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
   .stat__item:last-child {
     margin-right: 0; }
+
+.stat .slick-list {
+  margin-right: -16px; }
+
+.stat .slick-slide {
+  margin-right: 16px; }
 
 .stat__desc {
   font-family: "Roboto", sans-serif;
@@ -353,7 +368,8 @@
   font-weight: 400;
   color: #BF9D77;
   line-height: 1.5;
-  margin-right: 3px; }
+  margin-right: 3px;
+  white-space: nowrap; }
 
 .stat__info {
   font-family: "Roboto", sans-serif;
@@ -361,7 +377,8 @@
   font-weight: 400;
   color: #fff;
   line-height: 1.5;
-  margin-right: 3px; }
+  margin-right: 3px;
+  white-space: nowrap; }
 
 .stat__icon {
   padding-top: 2px; }
@@ -836,11 +853,22 @@
   .bg-line:after {
     display: none; } }
 
-@media (max-width: 1350px) {
-  .stat__item:nth-child(n+8) {
-    display: none; }
-  .stat__item:nth-child(7) {
-    margin-right: 0; } }
+@media (max-width: 1250px) {
+  .stat {
+    overflow: hidden;
+    position: relative; }
+    .stat:after {
+      content: "";
+      width: 40px;
+      height: 100%;
+      background: -webkit-gradient(linear, right top, left top, from(#2B323C), color-stop(0%, #2B323C), to(rgba(43, 50, 60, 0)));
+      background: -webkit-linear-gradient(right, #2B323C 0%, #2B323C 0%, rgba(43, 50, 60, 0) 100%);
+      background: -o-linear-gradient(right, #2B323C 0%, #2B323C 0%, rgba(43, 50, 60, 0) 100%);
+      background: linear-gradient(270deg, #2B323C 0%, #2B323C 0%, rgba(43, 50, 60, 0) 100%);
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 10; } }
 
 @media (max-width: 1200px) {
   .mobile-menu {
@@ -887,11 +915,7 @@
 
 @media (max-width: 992px) {
   .header-contact__phone {
-    font-size: 20px; }
-  .stat__item:nth-child(n+7) {
-    display: none; }
-  .stat__item:nth-child(6) {
-    margin-right: 0; } }
+    font-size: 20px; } }
 
 @media (max-width: 1200px) and (min-width: 766px) {
   .footer-logo img {
@@ -928,17 +952,13 @@
   .header__stat {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between; }
-  .stat__item:nth-child(n+6) {
-    display: none; }
-  .stat__item:nth-child(5) {
-    margin-right: 0; } }
+    justify-content: space-between; } }
 
 @media (max-width: 765px) {
   .header__menu {
     padding: 6.5px 0; }
   .header__stat {
-    display: none; }
+    display: none !important; }
   .header__info-block {
     margin-right: 0;
     width: 100%;
@@ -1034,6 +1054,93 @@
 
 .page_gray-foot .arrow-top:hover {
   background-color: #fff; }
+
+.page-nav {
+  margin-bottom: 80px; }
+  .page-nav__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .page-nav__arrow {
+    width: 60px;
+    height: 60px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 60px;
+    flex: 0 0 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background-color: #BF9D77;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+    margin-bottom: 20px; }
+    .page-nav__arrow svg {
+      width: 16px;
+      height: 16px;
+      fill: #fff;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+    .page-nav__arrow_prev svg {
+      -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+      transform: rotate(180deg); }
+    .page-nav__arrow:hover {
+      background-color: #F9F9F9; }
+      .page-nav__arrow:hover svg {
+        fill: #2B323C; }
+  .page-nav__pagin {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .page-nav__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 60px;
+    flex: 0 0 60px;
+    background-color: #F9F9F9;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    margin: 0 20px 20px; }
+    .page-nav__link:hover {
+      background-color: #BF9D77;
+      color: #fff; }
+    .page-nav__link.active {
+      background-color: #BF9D77;
+      color: #fff; }
+  .page-nav__more {
+    text-align: center;
+    display: none; }
 
 /*========Breadcrumbs=======*/
 .breadcrumbs {
@@ -2137,6 +2244,138 @@
       line-height: 1.5; }
 
 /*========/vacancy======*/
+/*========Article======*/
+.article {
+  margin-bottom: 90px; }
+  .article__data {
+    margin-top: 10px; }
+  .article__inner {
+    margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start; }
+  .article__content {
+    width: 77%;
+    padding-right: 50px; }
+  .article__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .article__photo {
+    width: 43.5%; }
+    .article__photo img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover; }
+  .article__col {
+    width: 65.5%;
+    padding-left: 40px; }
+  .article__text {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5; }
+    .article__text p {
+      margin-bottom: 40px; }
+      .article__text p:last-child {
+        margin-bottom: 0; }
+  .article__sidebar {
+    width: 23%; }
+    .article__sidebar .info-sidebar__title {
+      max-width: 100%; }
+
+/*========/article======*/
+/*=======Quote======*/
+.quote {
+  margin: 40px 0;
+  border: 4px solid rgba(191, 157, 119, 0.3);
+  padding: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: italic;
+  line-height: 1.5;
+  position: relative; }
+  .quote:before {
+    content: "";
+    width: 27px;
+    height: 24px;
+    background: url("../images/icons/quote.svg") center no-repeat;
+    position: absolute;
+    top: -15px;
+    left: 30px;
+    z-index: 1; }
+
+/*=======/quote=====*/
+/*========Supply=====*/
+.supply {
+  margin-bottom: 30px; }
+  .supply__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .supply__info {
+    width: 42%;
+    padding-right: 30px; }
+  .supply__slider {
+    width: 58%; }
+  .supply__text {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    margin-bottom: 20px; }
+    .supply__text:last-child {
+      margin-bottom: 0; }
+  .supply__list {
+    margin-bottom: 10px; }
+    .supply__list ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      margin-left: -60px; }
+    .supply__list li {
+      width: calc(33.33333% - 60px);
+      margin-left: 60px; }
+  .supply__warning {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start; }
+    .supply__warning img {
+      margin-top: 4px; }
+    .supply__warning div {
+      margin-left: 10px;
+      font-family: "Roboto", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      color: #983031;
+      line-height: 1.5; }
+  .supply__slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .supply__slide {
+    cursor: -webkit-zoom-in;
+    cursor: zoom-in; }
+    .supply__slide img {
+      width: 100%; }
+  .supply .slick-list {
+    margin-left: -20px; }
+  .supply .slick-slide {
+    margin-left: 20px; }
+
+/*========/supply=====*/
 /*========Adaptive======*/
 @media (max-width: 1440px) {
   .photo-slider {
@@ -2165,6 +2404,27 @@
     background-color: #F9F9F9; }
     .page_gray-foot .footer__info:before {
       background-color: #F9F9F9; }
+  .supply__inner {
+    display: block; }
+  .supply__info {
+    width: 100%;
+    padding-right: 0;
+    margin-bottom: 30px; }
+  .supply__list li {
+    width: calc(25% - 60px); }
+  .supply__warning {
+    max-width: 510px; }
+  .supply__slider {
+    width: 100%;
+    max-width: 540px; }
+  .supply .slick-track {
+    margin-left: 0; }
+  .supply .slick-list {
+    margin-left: 0;
+    margin-right: -12px; }
+  .supply .slick-slide {
+    margin-left: 0;
+    margin-right: 12px; }
   .contact-block__item {
     margin-right: 50px; }
   .sertificats {
@@ -2195,6 +2455,35 @@
     min-height: 100vh; } }
 
 @media (max-width: 992px) {
+  .article {
+    margin-bottom: 70px; }
+    .article__inner {
+      display: block; }
+    .article__content {
+      width: 100%;
+      margin-bottom: 50px;
+      padding-right: 0; }
+    .article__sidebar {
+      width: 100%; }
+      .article__sidebar .info-sidebar__inner {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+        .article__sidebar .info-sidebar__inner > * {
+          width: calc(50% - 10px);
+          margin-right: 20px; }
+          .article__sidebar .info-sidebar__inner > *:nth-child(even) {
+            margin-right: 0; }
+      .article__sidebar .info-sidebar__item {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; }
+      .article__sidebar .info-sidebar__title {
+        margin-right: 0;
+        margin-bottom: 10px; }
   .testimonial__info {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 460px;
@@ -2242,6 +2531,8 @@
       margin-top: 50px; }
   .contact-block {
     margin-bottom: 80px; }
+    .contact-block__inner.three .contact-block__box {
+      width: 100%; }
   .list-block {
     margin-top: 80px; }
     .list-block__inner {
@@ -2326,6 +2617,29 @@
     display: none; }
   .breadcrumbs__btn-back {
     display: inline-block; }
+  .supply__list ul {
+    margin-left: -25px; }
+  .supply__list li {
+    width: calc(33.33333% - 25px);
+    margin-left: 25px; }
+  .article {
+    margin-bottom: 55px; }
+    .article__inner {
+      margin-top: 30px; }
+    .article__content {
+      margin-bottom: 30px; }
+    .article__row {
+      display: block; }
+    .article__photo {
+      width: 100%;
+      margin-bottom: 30px; }
+    .article__col {
+      width: 100%;
+      padding-left: 0; }
+    .article__text p {
+      margin-bottom: 30px; }
+  .quote {
+    margin: 30px 0; }
   .text-block__content {
     margin-top: 30px; }
   .text-block__text p, .text-block__text ul {
@@ -2336,12 +2650,17 @@
       margin-top: 30px; }
   .contact-block {
     margin-bottom: 50px; }
-    .contact-block__inner.one .contact-block__info {
+    .contact-block__inner {
       -ms-flex-wrap: wrap;
       flex-wrap: wrap; }
-    .contact-block__inner.one .contact-block__item {
-      width: 100%;
-      margin-right: 0; }
+      .contact-block__inner.one .contact-block__info {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+      .contact-block__inner.one .contact-block__item {
+        width: 100%;
+        margin-right: 0; }
+      .contact-block__inner.two .contact-block__box {
+        width: 100%; }
   .list-block {
     margin-top: 50px; }
     .list-block .description {
@@ -2449,6 +2768,19 @@
     width: 100%; } }
 
 @media (max-width: 540px) {
+  .page-nav__inner {
+    display: none; }
+  .page-nav__more {
+    display: block; }
+    .page-nav__more .btn {
+      width: 100%; }
+      .page-nav__more .btn span:first-child {
+        -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto; }
+  .article__sidebar .info-sidebar__inner > * {
+    width: 100%;
+    margin-right: 0; }
   .vacancy__inner {
     margin-top: 30px; }
   .vacancy__item {
@@ -2488,6 +2820,12 @@
       left: -35px; } }
 
 @media (max-width: 414px) {
+  .supply__list li {
+    width: calc(50% - 25px);
+    margin-left: 25px; }
+  .supply .slick-list {
+    padding-right: 15px;
+    margin-right: -22px; }
   .sertificats-list {
     margin-bottom: 50px;
     padding: 40px 0; }
@@ -3077,7 +3415,11 @@ body.hidden {
     color: #2B323C;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    position: relative; }
+    position: relative;
+    display: block;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
     .info-box__title:before {
       content: "";
       width: 55px;
@@ -3087,13 +3429,8 @@ body.hidden {
       bottom: 0;
       left: 0;
       z-index: 1; }
-    .info-box__title a {
-      color: #2B323C;
-      -webkit-transition: all .2s linear;
-      -o-transition: all .2s linear;
-      transition: all .2s linear; }
-      .info-box__title a:hover {
-        color: #BF9D77; }
+    .info-box__title:hover {
+      color: #BF9D77; }
   .info-box__description {
     font-family: "Roboto", sans-serif;
     font-size: 12px;
@@ -3185,6 +3522,12 @@ body.hidden {
     transition: all .2s linear; }
     .info-sidebar__title a:hover {
       color: #BF9D77; }
+  .info-sidebar__title-main {
+    font-size: 24px;
+    font-weight: 900;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #BF9D77;
+    margin-bottom: 20px; }
 
 /*======/info-sidebar=====*/
 /*======Partner=======*/
@@ -3265,6 +3608,15 @@ body.hidden {
 .blog .info-box__info {
   padding-bottom: 30px; }
 
+.blog-page {
+  margin-bottom: 50px; }
+  .blog-page .info-box {
+    background-color: #F9F9F9; }
+  .blog-page .blog__inner {
+    margin-bottom: -30px; }
+    .blog-page .blog__inner > * {
+      margin-bottom: 30px; }
+
 /*==========/blog=======*/
 /*=======Adaptive======*/
 @media (max-width: 1600px) {
@@ -3323,7 +3675,14 @@ body.hidden {
   .blog__sidebar {
     width: 100%;
     padding-left: 0;
-    margin-top: 40px; } }
+    margin-top: 40px; }
+  .blog-page .blog__inner {
+    margin-bottom: -12px; }
+    .blog-page .blog__inner > * {
+      margin-bottom: 12px; }
+  .info-sidebar__item {
+    padding-bottom: 20px;
+    margin-bottom: 20px; } }
 
 @media (max-width: 860px) and (min-width: 480px) {
   .info-sidebar__item {
@@ -3478,12 +3837,15 @@ body.hidden {
   .info-box__title {
     max-width: 100%; }
   .blog__inner {
+    margin-top: 30px;
     margin-left: 0; }
     .blog__inner > * {
       margin-left: 0;
       width: 100%; }
       .blog__inner > *:first-child {
-        margin-bottom: 12px; } }
+        margin-bottom: 12px; }
+  .blog-page {
+    margin-bottom: 30px; } }
 
 @media (max-width: 414px) {
   .partner .slick-list {
